[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "disperse"
path = "src/disperse/main.rs"

[[bin]]
name = "disperse_multiple"
path = "src/disperse_multiple/main.rs"

[dependencies]
zg-da-rust-sdk = { path = "../sdk" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
