[package]
name = "zg-da-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13.0"

[build-dependencies]
tonic-build = "0.12.0"